--- a/Team_Purple/app/src/main/res/drawable/design_bg_coin_text.xml
+++ b/Team_Purple/app/src/main/res/drawable/design_bg_coin_text.xml
@@ -3,11 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFBFA" />
     <stroke
         android:width="2dp"
-        android:color="#F5F5F5" />
+        android:color="#B1ACAC" />
 
-    <corners android:radius="@dimen/dp_30" />
+    <corners android:radius="@dimen/dp_16" />
 
 </shape>
