--- a/Team_Purple/app/src/main/res/layout/activity_main.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,242 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
+
+    <ImageView
+        android:id="@+id/imguserProfile"
+        style="@style/topactionmenustyle"
+        android:src="@drawable/user_profile"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageView
+        android:id="@+id/imgcoinBalance"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
+        android:layout_margin="@dimen/dp_08"
+        android:src="@drawable/icon_coins"
+        app:layout_constraintBottom_toBottomOf="@+id/imguserProfile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/imguserProfile"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvcoinBalance"
+        android:text="0"
+        app:layout_constraintStart_toStartOf="@id/imgcoinBalance"
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingStart="@dimen/dp_40"
+        android:paddingEnd="@dimen/dp_10"
+        android:textStyle="bold"
+        android:layout_marginRight="@dimen/dp_10"
+        app:layout_constraintBottom_toBottomOf="@id/imguserProfile"
+        style="@style/coinBackground"
+        />
+
+
+    <ImageView
+        android:id="@+id/imgboostprofile"
+        style="@style/topactionmenustyle"
+        android:src="@drawable/boost_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/imgcoinBalance"
+        app:layout_constraintHorizontal_bias="0.803"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imgmenu"
+        style="@style/topactionmenustyle"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/icon_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.91"
+        android:paddingRight="@dimen/dp_10"
+        app:layout_constraintStart_toEndOf="@id/imgboostprofile"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imguserProfile"
+        app:layout_constraintBottom_toTopOf="@id/imgbottomnavsearch"
+        android:layout_margin="@dimen/dp_16"
+        app:cardCornerRadius="@dimen/dp_10"
+        android:elevation="@dimen/dp_10"
+        >
+
+        <ImageView
+            android:id="@+id/imgsuggestedprofile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/profile_1"
+            android:scaleType="fitXY"
+            />
+
+        <TextView
+            android:id="@+id/tvprofiledistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="23 Km"
+            android:elevation="@dimen/dp_16"
+            android:textColor="@color/black"
+            android:background="@drawable/design_bg_edi_text_signupform"
+            android:padding="@dimen/dp_08"
+            android:layout_margin="@dimen/dp_16"
+            />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#D2D2D4"
+            android:layout_gravity="bottom|center"
+            android:layout_margin="@dimen/dp_20"
+            app:cardCornerRadius="@dimen/dp_10"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    >
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Snehal , 23"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/sp_20"
+                        android:paddingLeft="@dimen/sp_16"
+                        android:paddingTop="@dimen/dp_08"
+                        android:layout_margin="@dimen/dp_10"
+                        android:drawableEnd="@drawable/ic_baseline_message_24"
+                        />
+
+
+
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:weightSum="7"
+                    android:layout_margin="@dimen/dp_08"
+                    >
+
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:backgroundTint="#707070"
+                        android:paddingStart="@dimen/dp_10"
+                        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
+                        />
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:backgroundTint="#E9983F"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
+                        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
+                        />
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:backgroundTint="@color/primary"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
+                        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
+                        />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+
+
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.cardview.widget.CardView>
+
+
+
+
+
+
+
+
+
+    <ImageView
+        android:id="@+id/imgbottomnavsearch"
+        style="@style/bottomnavStyle"
+        android:src="@drawable/ic_bottom_nav_search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imgbottomnavcrown"
+        />
+
+    <ImageView
+        android:id="@+id/imgbottomnavcrown"
+        style="@style/bottomnavStyle"
+        android:src="@drawable/ic_bottom_nav_crown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgbottomnavchat"
+        app:layout_constraintStart_toEndOf="@+id/imgbottomnavsearch" />
+
+    <ImageView
+        android:id="@+id/imgbottomnavchat"
+        style="@style/bottomnavStyle"
+        android:src="@drawable/ic_bottom_nav_chat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imgbottomnavcrown"
+        app:layout_constraintEnd_toStartOf="@id/imgbottomnavshare" />
+
+    <ImageView
+        android:id="@+id/imgbottomnavshare"
+        style="@style/bottomnavStyle"
+        android:src="@drawable/ic_bottom_nav_share"
+        app:layout_constraintEnd_toStartOf="@id/imgbottomnavuser"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imgbottomnavchat"
+        app:layout_constraintHorizontal_bias="0.91"
+        />
+
+    <ImageView
+        android:id="@+id/imgbottomnavuser"
+        style="@style/bottomnavStyle"
+        android:src="@drawable/ic_bottom_nav_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.91"
+        />
 
 
 
