--- a/Team_Purple/app/src/main/res/layout/activity_signup.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_margin="@dimen/dp_08"
     tools:context=".SignupActivity">
 
     <ImageView
@@ -14,7 +13,7 @@
         android:layout_height="80dp"
         android:layout_marginLeft="@dimen/dp_20"
         android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/icon_heart"
+        android:background="@drawable/logo_transperent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -98,6 +97,7 @@
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginRight="@dimen/dp_30"
         android:gravity="end"
+        android:textStyle="bold"
         android:text="@string/text_forget_pass"
         android:textAllCaps="true"
         android:textColor="@color/black"
