Added Features : Promotional feature, And Hot matching Activity

--- a/Team_Purple/app/src/main/res/values/colors.xml
+++ b/Team_Purple/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="input_form_bg">#F5F5F5</color>
     <color name="input_form_border">#F5F5F5</color>
 
+    <color name="callhotmeetorange">#F75F0B</color>
+
+    <color name="redheartbg">#A92A31</color>
+
     <color name="goldenCoin">#FAA93E</color>
 
     <color name="facebook_blue">#39559F</color>
