--- a/Team_Purple/app/src/main/res/drawable/design_bg_btn_callhotmatch.xml
+++ b/Team_Purple/app/src/main/res/drawable/design_bg_btn_callhotmatch.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/primary" />
+    <solid android:color="@color/callhotmeetorange" />
     <corners android:radius="@dimen/dp_30" />
 </shape>
