--- a/Team_Purple/app/src/main/res/layout/activity_main.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -184,7 +185,6 @@
 
 
 
-
         </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
@@ -240,7 +240,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.91"
         />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
