--- a/Team_Purple/app/src/main/res/layout/activity_home.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_home.xml
@@ -40,6 +40,7 @@
         app:layout_constraintStart_toEndOf="@+id/tvMeetly" />
 
     <TextView
+        android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_10"
