--- a/Team_Purple/app/src/main/res/drawable-v24/splash_screen_background.xml
+++ b/Team_Purple/app/src/main/res/drawable-v24/splash_screen_background.xml
@@ -5,7 +5,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/splash_logo"
-            />
+            android:src="@drawable/splash_logo" />
     </item>
 </layer-list>
