--- a/Team_Purple/app/src/main/res/drawable/design_bg_invite_friend_btn.xml
+++ b/Team_Purple/app/src/main/res/drawable/design_bg_invite_friend_btn.xml
@@ -1,7 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="@color/facebook_blue" />
-
+    <solid android:color="@color/input_form_bg" />
     <corners android:radius="@dimen/dp_30" />
+
+    <stroke
+        android:color="@color/white"
+        android:width="2dp" />
 </shape>
