--- a/Team_Purple/app/src/main/res/drawable/design_bg_needhelp_btn.xml
+++ b/Team_Purple/app/src/main/res/drawable/design_bg_needhelp_btn.xml
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <solid android:color="@color/white" />
+    <corners android:radius="@dimen/dp_30" />
 
+    <stroke
+        android:color="@color/input_form_border"
+        android:width="2dp" />
 </shape>
