--- a/Team_Purple/app/src/main/res/layout/activity_forgotpass.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_forgotpass.xml
@@ -18,8 +18,8 @@
         android:padding="@dimen/dp_20"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -28,7 +28,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_baseline_arrow_back_ios_24"
         android:layout_marginTop="@dimen/dp_15"
-        android:layout_marginStart="@dimen/dp_15"/>
+        android:layout_marginStart="@dimen/dp_15" />
+
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
@@ -39,7 +40,8 @@
         android:layout_marginRight="@dimen/dp_20"
         android:background="@drawable/round_baground"
         android:layout_marginTop="@dimen/dp_100"
-        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />
+
     <Button
         android:id="@+id/btn_save"
         android:layout_width="match_parent"
@@ -52,7 +54,6 @@
         android:layout_marginRight="@dimen/dp_20"
         app:layout_constraintTop_toBottomOf="@id/et_email"
         android:background="@drawable/pink_login_rectangle"
-        android:layout_marginTop="@dimen/dp_30"
-        />
+        android:layout_marginTop="@dimen/dp_30" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
