--- a/Team_Purple/app/src/main/res/layout/activity_hot_meet.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_hot_meet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,8 +36,7 @@
         android:textStyle="bold"
         android:layout_marginRight="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="@id/imguserProfile"
-        style="@style/coinBackground"
-        />
+        style="@style/coinBackground" />
 
     <ImageView
         android:id="@+id/imghotmeettitlephoto"
@@ -63,10 +61,7 @@
         android:paddingEnd="@dimen/dp_10"
         android:textStyle="bold|italic"
         android:layout_marginRight="@dimen/dp_10"
-        app:layout_constraintBottom_toBottomOf="@id/imghotmeettitlephoto"
-        />
-
-
+        app:layout_constraintBottom_toBottomOf="@id/imghotmeettitlephoto" />
 
 
     <TextView
@@ -79,8 +74,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imguserProfile"
         android:gravity="center"
-        android:layout_marginTop="@dimen/dp_10"
-        />
+        android:layout_marginTop="@dimen/dp_10" />
 
 
     <LinearLayout
@@ -93,16 +87,14 @@
         app:layout_constraintTop_toBottomOf="@id/tvmostactivetitle"
         app:layout_constraintBottom_toTopOf="@id/btnCallHotMatch"
         android:layout_margin="@dimen/dp_10"
-        android:weightSum="2"
-        >
+        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:weightSum="2"
-            >
+            android:weightSum="2">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
@@ -145,8 +137,7 @@
             android:layout_weight="1"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:weightSum="2"
-            >
+            android:weightSum="2">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
@@ -183,11 +174,9 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-
 
 
     </LinearLayout>
-
 
 
     <Button
@@ -204,10 +193,7 @@
         android:textAllCaps="false"
         android:paddingLeft="@dimen/dp_50"
         android:paddingRight="@dimen/dp_50"
-        android:background="@drawable/design_bg_btn_callhotmatch"
-        />
-
-
+        android:background="@drawable/design_bg_btn_callhotmatch" />
 
 
     <ImageView
@@ -216,8 +202,7 @@
         android:src="@drawable/ic_bottom_nav_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/imgbottomnavcrown"
-        />
+        app:layout_constraintEnd_toStartOf="@id/imgbottomnavcrown" />
 
     <ImageView
         android:id="@+id/imgbottomnavcrown"
@@ -242,8 +227,7 @@
         app:layout_constraintEnd_toStartOf="@id/imgbottomnavuser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/imgbottomnavchat"
-        app:layout_constraintHorizontal_bias="0.91"
-        />
+        app:layout_constraintHorizontal_bias="0.91" />
 
     <ImageView
         android:id="@+id/imgbottomnavuser"
@@ -251,7 +235,6 @@
         android:src="@drawable/ic_bottom_nav_user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.91"
-        />
+        app:layout_constraintHorizontal_bias="0.91" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
