--- a/Team_Purple/app/src/main/res/layout/activity_main.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -39,8 +38,7 @@
         android:textStyle="bold"
         android:layout_marginRight="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="@id/imguserProfile"
-        style="@style/coinBackground"
-        />
+        style="@style/coinBackground" />
 
 
     <ImageView
@@ -64,8 +62,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -75,16 +71,14 @@
         app:layout_constraintBottom_toTopOf="@id/imgbottomnavsearch"
         android:layout_margin="@dimen/dp_16"
         app:cardCornerRadius="@dimen/dp_10"
-        android:elevation="@dimen/dp_10"
-        >
+        android:elevation="@dimen/dp_10">
 
         <ImageView
             android:id="@+id/imgsuggestedprofile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/profile_1"
-            android:scaleType="fitXY"
-            />
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/tvprofiledistance"
@@ -95,8 +89,7 @@
             android:textColor="@color/black"
             android:background="@drawable/design_bg_edi_text_signupform"
             android:padding="@dimen/dp_08"
-            android:layout_margin="@dimen/dp_16"
-            />
+            android:layout_margin="@dimen/dp_16" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -104,22 +97,20 @@
             android:backgroundTint="#D2D2D4"
             android:layout_gravity="bottom|center"
             android:layout_margin="@dimen/dp_20"
-            app:cardCornerRadius="@dimen/dp_10"
-            >
+            app:cardCornerRadius="@dimen/dp_10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -130,13 +121,10 @@
                         android:paddingLeft="@dimen/sp_16"
                         android:paddingTop="@dimen/dp_08"
                         android:layout_margin="@dimen/dp_10"
-                        android:drawableEnd="@drawable/ic_baseline_message_24"
-                        />
-
+                        android:drawableEnd="@drawable/ic_baseline_message_24" />
 
 
                 </LinearLayout>
-
 
 
                 <LinearLayout
@@ -146,8 +134,7 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:weightSum="7"
-                    android:layout_margin="@dimen/dp_08"
-                    >
+                    android:layout_margin="@dimen/dp_08">
 
                     <Button
                         android:layout_width="0dp"
@@ -155,8 +142,8 @@
                         android:layout_weight="3"
                         android:backgroundTint="#707070"
                         android:paddingStart="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
-                        />
+                        android:drawableLeft="@drawable/ic_baseline_visibility_off_24" />
+
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -164,8 +151,8 @@
                         android:backgroundTint="#E9983F"
                         android:paddingLeft="@dimen/dp_10"
                         android:paddingRight="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
-                        />
+                        android:drawableLeft="@drawable/ic_baseline_star_rate_24" />
+
                     <Button
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -173,8 +160,7 @@
                         android:backgroundTint="@color/primary"
                         android:paddingLeft="@dimen/dp_10"
                         android:paddingRight="@dimen/dp_10"
-                        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24"
-                        />
+                        android:drawableLeft="@drawable/ic_baseline_remove_red_eye_24" />
 
 
                 </LinearLayout>
@@ -183,18 +169,9 @@
             </LinearLayout>
 
 
-
-
         </androidx.cardview.widget.CardView>
 
     </androidx.cardview.widget.CardView>
-
-
-
-
-
-
-
 
 
     <ImageView
@@ -203,8 +180,7 @@
         android:src="@drawable/ic_bottom_nav_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/imgbottomnavcrown"
-        />
+        app:layout_constraintEnd_toStartOf="@id/imgbottomnavcrown" />
 
     <ImageView
         android:id="@+id/imgbottomnavcrown"
@@ -229,8 +205,7 @@
         app:layout_constraintEnd_toStartOf="@id/imgbottomnavuser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/imgbottomnavchat"
-        app:layout_constraintHorizontal_bias="0.91"
-        />
+        app:layout_constraintHorizontal_bias="0.91" />
 
     <ImageView
         android:id="@+id/imgbottomnavuser"
@@ -238,8 +213,7 @@
         android:src="@drawable/ic_bottom_nav_user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.91"
-        />
+        app:layout_constraintHorizontal_bias="0.91" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
