--- a/Team_Purple/app/src/main/res/layout/activity_privacy_and_policy.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_privacy_and_policy.xml
@@ -17,8 +17,8 @@
         android:padding="@dimen/dp_20"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -27,24 +27,26 @@
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_back_arrow"
         android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginStart="@dimen/dp_10"
-        />
+        android:layout_marginStart="@dimen/dp_10" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/tv_policy">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tv_policy"
                 android:textSize="@dimen/sp_20"
-                android:layout_marginStart="@dimen/dp_15"/>
+                android:layout_marginStart="@dimen/dp_15" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
