--- a/Team_Purple/app/src/main/res/layout/activity_terms_and_service.xml
+++ b/Team_Purple/app/src/main/res/layout/activity_terms_and_service.xml
@@ -17,8 +17,8 @@
         android:padding="@dimen/dp_20"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_back_arrow"
         android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginStart="@dimen/dp_10"/>
+        android:layout_marginStart="@dimen/dp_10" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -39,6 +39,6 @@
         android:layout_marginStart="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_15"
         android:textSize="@dimen/sp_20"
-        app:layout_constraintTop_toBottomOf="@id/tv_term_of_service"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_term_of_service" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
