commit Buy Coins Feature

--- a/Team_Purple/app/src/main/res/values/colors.xml
+++ b/Team_Purple/app/src/main/res/values/colors.xml
@@ -31,7 +31,7 @@
     <color name="darkGrey">#090808</color>
     <color name="red">#FF0000</color>
     <color name="orange">#FF7F00</color>
-    <color name="yellow">#FFFF00</color>
+    <color name="yellow">#C8A509</color>
     <color name="purple">#D900FF</color>
     <color name="blueHeader">#1C6786</color>
     <color name="splashbg">#FFFFFF</color>
